test: do not merge please
Use this link to re-run the recipe: https://dev.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava25?organizationId=QUxML01vZGVybmUvTW9kZXJuZSAtIFB1YmxpYw%3D%3D

Co-authored-by: Moderne <team@moderne.io>